k8s/01-namespace-configmap.yaml
---
# Namespace for Niyanta
apiVersion: v1
kind: Namespace
metadata:
  name: niyanta
